# lllm

./: .gitignore  .gitmodules  README.md  dataloader.py  deepspeed_config.json  hostfile  pong.py  requirements.txt  test_lin_rel_pos_encoding.py  test_linear_attn.py  test_mamba.py  test_sglu.py  test_simple_rms_norm.py  test_tiktoken.py  test_tokenizer.py  train.py
.attic/: model2.py  ngram.py  plot_lr.py  test_mamba.py  test_rwkv_tokenizer.py
dataset/: .gitignore  README.md  __init__.py  copy_dataset.sh  copy_hosts.txt  download_dataset.py  hosts.txt  launch_shard_dataset.py  make_shard_script.py  save_dataset.py  shard_dataset.py  special_tokens.py  test_dataloader.py  test_dataset.py  test_tiktoken.py
dataset/cpp_dataloader/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  __init__.py  compressor.cpp  cpp_dataloader.py  dataloader.cpp  dataloader.py  install.sh  mapped_file.cpp  mapped_file.hpp  setup.py  test_cpp_dataloader.py  tokenized_data_loader.cpp  tokenized_data_loader.hpp  tokenized_data_prep.cpp  tokenized_data_prep.hpp  worker_pool.cpp  worker_pool.hpp
dataset/cpp_dataloader/cityhash/: city.cc
dataset/cpp_dataloader/cmake/: FindLibUring.cmake
dataset/cpp_dataloader/cpppath/: cpppath.h
dataset/cpp_dataloader/dataloader.egg-info/: PKG-INFO  SOURCES.txt
dataset/cpp_dataloader/include/: compressor.hpp  dataloader.hpp  tokenized_data_loader.hpp  tokenized_data_prep.hpp  tools.hpp  uring_file.hpp  worker_pool.hpp
dataset/cpp_dataloader/ryml/: ryml.cpp
dataset/cpp_dataloader/src/: compressor.cpp  dataloader.cpp  mapped_file.cpp  tokenized_data_loader.cpp  tokenized_data_prep.cpp  tools.cpp  uring_file.cpp  worker_pool.cpp
dataset/cpp_dataloader/test_data/: .gitignore
dataset/cpp_dataloader/tests/: test_compressor.cpp  test_data_loader.cpp  test_data_prep.cpp  test_mapped_file.cpp  test_tools.cpp  test_uring_file.cpp  test_worker_pool.cpp
dataset/cpp_dataloader/uring/: queue.c  register.c  syscall.c  syscall.h  version.c
dataset/cpp_dataloader/uring/include/: uring.h
dataset/package/: .gitignore  CMakeLists.txt  README.md  __init__.py  setup.py  test_cpp_dataloader.py
dataset/package/include/: compressor.hpp  dataloader.hpp  tokenized_data_loader.hpp  tokenized_data_prep.hpp  tokenized_data_verify.hpp  tools.hpp  uring_file.hpp  worker_pool.hpp  yaml_parser.hpp
dataset/package/python_src/cpp_dataloader/: __init__.py  cpp_dataloader_wrapper.py
dataset/package/ryml/: ryml.hpp
dataset/package/src/: compressor.cpp  mapped_file.cpp  python_module.cpp  tokenized_data_loader.cpp  tokenized_data_prep.cpp  tokenized_data_verify.cpp  tools.cpp  uring_file.cpp  yaml_parser.cpp
dataset/package/tests/: test_compressor.cpp  test_data_loader.cpp  test_data_prep.cpp  test_mapped_file.cpp  test_tools.cpp  test_uring_file.cpp
dataset/package/uring/: setup.c
distributed/: README.md  async_orchestrator.py  async_protocol.py  test_client.py  test_server.py
distributed/package/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  install.sh  setup.py
distributed/package/python_src/: .gitignore
distributed/package/python_src/cpp_distributed/: __init__.py  cpp_distributed_wrapper.py
distributed/package/src/: fp_compress.cpp  python_module.cpp
model/: __init__.py  attention.py  downsampler.py  latent_lm.py  lru.py  mamba.py  mambaformer.py  model.py  ngram.py  srmsnorm.py  tokenizer.py  transnormer.py  util.py
model/linear_attention/: LICENSE  README.md  lightning_attn_interface.py  srmsnorm.py
playbooks/: .gitignore  README.md  ansible.cfg  install_conda.yml  install_cuda.yml  install_ssh_key.sh  inventory.ini  setup_lllm.yml  test_install.py  test_install.yml  update_code.yml
train/: .gitignore  README.md  accelerate_train.py  adalomo.py  adam_mini.py  deepspeed_config.json  ds_train_new.py  ds_train_old.py  hosts.txt  launch_local_train.sh  make_train_script.py  mora.py  sample_mask.py  sophia.py  train.py
train/async/: README.md  async_train.py  async_worker.py  requirements.txt
train/model/: model.py
training/: README.md  mora.py  mora_test.py  train.py
training/model/: srmsnorm.py
